# dotfiles

./: .VimballRecord  .agignore  .bash_aliases  .bash_fns  .bash_lib  .bash_profile  .bashrc  .eslintrc  .eslintrc.json  .gitattributes_global  .gitconfig  .gitignore  .gitignore_global  .gitmodules  .jshintrc  .prettierrc  .pylintrc  .tmux.conf  .tmux_color.sh  .vimrc  .ycm_extra_conf.py  TODO  boot-into-linux.cmd  boot-into-win.sh  bootstrap.bash  bootstrap.sh  bootstrap_bin.sh  bootstrap_dot.sh  bootstrap_misc.sh  bootstrap_nvim.sh  claude_bwrap.sh  cool_gpu_95.sh  decrypt.sh  destroy.sh  gd  go.mod  godeb.sh  gogo.sh  lab_restart.sh  lib.sh  (+8 more)
.gitencrypt/: clean_filter_openssl  diff_filter_openssl  smudge_filter_openssl
.ssh/: config
.vim/: .netrwhist  .vimrc  syntax
chef/: Berksfile  bootstrap.sh  bootstrap_local.sh  bootstrap_remote.sh  deploy.sh  fetch_pub_keys.sh  install.sh  run_chef_role.sh  solo.rb  sshkey_deploy.sh
cron/: README.md  cron_entries  on_reboot.sh
extra/: com.googlecode.iterm2.plist  osx_spectacle.json
extraSetting/: com.googlecode.iterm2.plist
extraSettings/: com.googlecode.iterm2.plist
m/: .dockerignore  README.md  bootstrap.sh  constant.py  csv_util.py  fs_util.py  git_util.py  h5_util.py  json_util.py  log.conf  log.yml  m  m_base.py  m_cc.py  m_chef.py  m_dedup.py  m_deploy.py  m_docker.py  m_keras.py  m_shell.py  (+11 more)
rust/short/: Cargo.lock~simple db trait  Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  TODO
rust/short/.claude/: settings.local.json
rust/short/script/: deploy.sh  setup.sh
rust/short/src/: api.rs  db.rs  error.rs  fs.rs  gist.rs  link.rs  main.rs
(+138 files in other folders)
