[package]
name = "short"
version = "0.1.0"
authors = ["paul <paul@cueb.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
hyper = "0.13"
git2 = "0.10"