[package]
name = "short"
version = "0.1.0"
authors = ["paul <ppymou@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16", features = ["full"] }
futures = "0.3"
hyper = "0.13"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
data-encoding = "2.1.2"
